tests/e2e/complex_nested_expression2.story
a = true and 1 + 1 == 2 or 3
